--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&family=Lobster&family=Pacifico&family=Great+Vibes&family=Orbitron&family=Rajdhani:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-
+<meta name="google-adsense-account" content="ca-pub-3383070348689557">
     <!-- SCRIPTS FROM ORIGINAL 3D GENERATOR -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module" src="./libs/FileSaver.js"></script>
@@ -28,6 +28,8 @@
     <link rel="preload" href="./letterData.js" as="script">
     <link rel="preload" href="./three/examples/jsm/exporters/STLExporter.js" as="script">
     <link rel="preload" href="./three/build/three.module.js" as="script">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
+     crossorigin="anonymous"></script>
 
     <script>
         tailwind.config = {
