--- a/free-generator.html
+++ b/free-generator.html
@@ -40,6 +40,21 @@
     <link rel="preload" href="./three/examples/jsm/exporters/STLExporter.js" as="script">
     <link rel="preload" href="./three/build/three.module.js" as="script">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N55FBP8DJ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N55FBP8DJ2');
+</script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "ti80pje0n3");
+</script>
     <script>
         tailwind.config = {
             theme: {
