--- a/privacy.html
+++ b/privacy.html
@@ -14,6 +14,22 @@
      crossorigin="anonymous"></script>
 
      <meta name="google-adsense-account" content="ca-pub-3383070348689557">
+
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N55FBP8DJ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N55FBP8DJ2');
+</script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "ti80pje0n3");
+</script>
     <script>
         tailwind.config = {
             theme: {
