--- a/free-generator.html
+++ b/free-generator.html
@@ -20,19 +20,17 @@
     <meta name="keywords"
         content="ambigram generator free, 3D printing, free ambigram maker, online ambigram creator, create ambigrams for free, STL generator">
 <meta name="google-adsense-account" content="ca-pub-3383070348689557">
-    <!-- STYLES AND FONTS FROM NEW DESIGN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="./js/tailwindcss.js"></script>
+    <link href="./css/font-awesome.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&family=Lobster&family=Pacifico&family=Great+Vibes&family=Orbitron&family=Rajdhani:wght@400;500;600;700&display=swap"
+        href="./css/font.css"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
      crossorigin="anonymous"></script>
-    <!-- SCRIPTS FROM ORIGINAL 3D GENERATOR -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./js/jqery.min.js"></script>
     <script type="module" src="./libs/FileSaver.js"></script>
     <script type="module" src="main.js"></script>
     <script src="./libs/gif.js"></script>
