--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- STYLES AND FONTS FROM NEW DESIGN -->
     <script src="./js/tailwindcss.js"></script>
     <link href="./css/font-awesome.min.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="./css/font.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
@@ -28,9 +28,26 @@
     <script type="module" src="./libs/FileSaver.js"></script>
     <script type="module" src="main.js"></script>
     <script src="./libs/gif.js"></script>
-    <link rel="preload" href="./letterData.js" as="script" type="text/javascript" />
-    <link rel="preload" href="./three/examples/jsm/exporters/STLExporter.js" as="script" type="module" crossorigin />
-    <link rel="preload" href="./three/build/three.module.js" as="script" type="module" crossorigin />
+    <link
+      rel="preload"
+      href="./letterData.js"
+      as="script"
+      type="text/javascript"
+    />
+    <link
+      rel="preload"
+      href="./three/examples/jsm/exporters/STLExporter.js"
+      as="script"
+      type="module"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="./three/build/three.module.js"
+      as="script"
+      type="module"
+      crossorigin
+    />
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
