--- a/free-generator.html
+++ b/free-generator.html
@@ -21,7 +21,7 @@
         content="ambigram generator free, 3D printing, free ambigram maker, online ambigram creator, create ambigrams for free, STL generator">
 <meta name="google-adsense-account" content="ca-pub-3383070348689557">
     <script src="./js/tailwindcss.js"></script>
-    <link href="./css/font-awesome.min.css" rel="stylesheet">
+      <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
