--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- STYLES AND FONTS FROM NEW DESIGN -->
     <script src="./js/tailwindcss.js"></script>
-    <link href="./css/font-awesome.min.css" rel="stylesheet" />
+      <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="./css/font.css" rel="stylesheet" />
