--- a/faq.html
+++ b/faq.html
@@ -126,11 +126,11 @@
     class="font-inter bg-gradient-to-br from-dark to-gray-800 text-light min-h-screen"
   >
     <!-- Navbar -->
-    <nav id="navbar" class="fixed w-full z-50 transition-all duration-300 py-4">
+     <nav id="navbar" class="fixed w-full z-50 transition-all duration-300 py-4">
       <div
         class="container mx-auto px-4 md:px-6 flex justify-between items-center"
       >
-        <a href="#" class="flex items-center gap-2">
+        <a href="index.html" class="flex items-center gap-2">
           <span class="fa fa-refresh text-primary text-2xl rotate-45"></span>
           <span
             class="text-2xl font-bold bg-gradient-to-r from-primary to-secondary gradient-text"
@@ -142,27 +142,38 @@
           <a href="index.html" class="hover:text-primary transition-colors"
             >Home</a
           >
-          <a
-            href="index.html#features"
-            class="hover:text-primary transition-colors"
+          <a href="#features" class="hover:text-primary transition-colors"
             >Features</a
           >
-          <a
-            href="index.html#examples"
-            class="hover:text-primary transition-colors"
+          <a href="#examples" class="hover:text-primary transition-colors"
             >Examples</a
           >
-          <a
-            href="index.html#fonts"
-            class="hover:text-primary transition-colors"
+          <a href="#fonts" class="hover:text-primary transition-colors"
             >Fonts</a
           >
-          <a href="faq.html" class="text-primary font-medium">FAQ</a>
+          <a
+            href="tattoo-generator.html"
+            class="hover:text-primary transition-colors"
+            >Tattoo Ideas</a
+          >
+          <a
+            href="free-generator.html"
+            class="hover:text-primary transition-colors"
+            >Free Generator</a
+          >
+          <a href="faq.html" class="hover:text-primary transition-colors"
+            >FAQ</a
+          >
+          <a
+            href="ambigram-generator-guide.html"
+            class="text-primary font-medium"
+            >Guide</a
+          >
         </div>
 
         <div class="flex items-center gap-4">
           <a
-            href="index.html#generator"
+            href="#generator"
             class="hidden md:block bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-full transition-all hover:shadow-lg hover:shadow-primary/20"
           >
             Generate Now
@@ -182,24 +193,35 @@
           <a href="index.html" class="py-2 hover:text-primary transition-colors"
             >Home</a
           >
-          <a
-            href="index.html#features"
-            class="py-2 hover:text-primary transition-colors"
+          <a href="#features" class="py-2 hover:text-primary transition-colors"
             >Features</a
           >
-          <a
-            href="index.html#examples"
-            class="py-2 hover:text-primary transition-colors"
+          <a href="#examples" class="py-2 hover:text-primary transition-colors"
             >Examples</a
           >
-          <a
-            href="index.html#fonts"
-            class="py-2 hover:text-primary transition-colors"
+          <a href="#fonts" class="py-2 hover:text-primary transition-colors"
             >Fonts</a
           >
-          <a href="faq.html" class="py-2 text-primary font-medium">FAQ</a>
           <a
-            href="index.html#generator"
+            href="tattoo-generator.html"
+            class="py-2 hover:text-primary transition-colors"
+            >Tattoo Ideas</a
+          >
+          <a
+            href="free-generator.html"
+            class="py-2 hover:text-primary transition-colors"
+            >Free Generator</a
+          >
+          <a href="faq.html" class="py-2 hover:text-primary transition-colors"
+            >FAQ</a
+          >
+          <a
+            href="ambigram-generator-guide.html"
+            class="py-2 text-primary font-medium"
+            >Guide</a
+          >
+          <a
+            href="#generator"
             class="bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-full text-center transition-all"
           >
             Generate Now
