--- a/free-generator.html
+++ b/free-generator.html
@@ -160,18 +160,32 @@
           <a href="index.html" class="hover:text-primary transition-colors"
             >Home</a
           >
-          <a
-            href="index.html#features"
-            class="hover:text-primary transition-colors"
+          <a href="#features" class="hover:text-primary transition-colors"
             >Features</a
           >
-          <a
-            href="index.html#generator"
-            class="hover:text-primary transition-colors"
-            >Generator</a
+          <a href="#examples" class="hover:text-primary transition-colors"
+            >Examples</a
           >
-          <a href="index.html#uses" class="hover:text-primary transition-colors"
-            >Use Cases</a
+          <a href="#fonts" class="hover:text-primary transition-colors"
+            >Fonts</a
+          >
+          <a
+            href="tattoo-generator"
+            class="hover:text-primary transition-colors"
+            >Tattoo Ideas</a
+          >
+          <a
+            href="free-generator"
+            class="hover:text-primary transition-colors"
+            >Free Generator</a
+          >
+          <a href="faq" class="hover:text-primary transition-colors"
+            >FAQ</a
+          >
+          <a
+            href="ambigram-generator-guide"
+            class="text-primary font-medium"
+            >Guide</a
           >
         </div>
 
@@ -197,20 +211,32 @@
           <a href="index.html" class="py-2 hover:text-primary transition-colors"
             >Home</a
           >
-          <a
-            href="index.html#features"
-            class="py-2 hover:text-primary transition-colors"
+          <a href="#features" class="py-2 hover:text-primary transition-colors"
             >Features</a
           >
-          <a
-            href="index.html#generator"
-            class="py-2 hover:text-primary transition-colors"
-            >Generator</a
+          <a href="#examples" class="py-2 hover:text-primary transition-colors"
+            >Examples</a
+          >
+          <a href="#fonts" class="py-2 hover:text-primary transition-colors"
+            >Fonts</a
           >
           <a
-            href="index.html#uses"
+            href="tattoo-generator"
             class="py-2 hover:text-primary transition-colors"
-            >Use Cases</a
+            >Tattoo Ideas</a
+          >
+          <a
+            href="free-generator"
+            class="py-2 hover:text-primary transition-colors"
+            >Free Generator</a
+          >
+          <a href="faq" class="py-2 hover:text-primary transition-colors"
+            >FAQ</a
+          >
+          <a
+            href="ambigram-generator-guide"
+            class="py-2 text-primary font-medium"
+            >Guide</a
           >
           <a
             href="#generator"
