--- a/index.html
+++ b/index.html
@@ -183,20 +183,20 @@
             >Fonts</a
           >
           <a
-            href="tattoo-generator.html"
+            href="tattoo-generator"
             class="hover:text-primary transition-colors"
             >Tattoo Ideas</a
           >
           <a
-            href="free-generator.html"
+            href="free-generator"
             class="hover:text-primary transition-colors"
             >Free Generator</a
           >
-          <a href="faq.html" class="hover:text-primary transition-colors"
+          <a href="faq" class="hover:text-primary transition-colors"
             >FAQ</a
           >
           <a
-            href="ambigram-generator-guide.html"
+            href="ambigram-generator-guide"
             class="text-primary font-medium"
             >Guide</a
           >
@@ -234,20 +234,20 @@
             >Fonts</a
           >
           <a
-            href="tattoo-generator.html"
+            href="tattoo-generator"
             class="py-2 hover:text-primary transition-colors"
             >Tattoo Ideas</a
           >
           <a
-            href="free-generator.html"
+            href="free-generator"
             class="py-2 hover:text-primary transition-colors"
             >Free Generator</a
           >
-          <a href="faq.html" class="py-2 hover:text-primary transition-colors"
+          <a href="faq" class="py-2 hover:text-primary transition-colors"
             >FAQ</a
           >
           <a
-            href="ambigram-generator-guide.html"
+            href="ambigram-generator-guide"
             class="py-2 text-primary font-medium"
             >Guide</a
           >
