--- a/privacy.html
+++ b/privacy.html
@@ -80,7 +80,7 @@
 </head>
 <body class="font-inter bg-gradient-to-br from-dark to-gray-800 text-light min-h-screen">
     <!-- Navbar -->
-      <nav id="navbar" class="fixed w-full z-50 transition-all duration-300 py-4">
+     <nav id="navbar" class="fixed w-full z-50 transition-all duration-300 py-4">
       <div
         class="container mx-auto px-4 md:px-6 flex justify-between items-center"
       >
@@ -106,20 +106,20 @@
             >Fonts</a
           >
           <a
-            href="tattoo-generator.html"
+            href="tattoo-generator"
             class="hover:text-primary transition-colors"
             >Tattoo Ideas</a
           >
           <a
-            href="free-generator.html"
+            href="free-generator"
             class="hover:text-primary transition-colors"
             >Free Generator</a
           >
-          <a href="faq.html" class="hover:text-primary transition-colors"
+          <a href="faq" class="hover:text-primary transition-colors"
             >FAQ</a
           >
           <a
-            href="ambigram-generator-guide.html"
+            href="ambigram-generator-guide"
             class="text-primary font-medium"
             >Guide</a
           >
@@ -157,20 +157,20 @@
             >Fonts</a
           >
           <a
-            href="tattoo-generator.html"
+            href="tattoo-generator"
             class="py-2 hover:text-primary transition-colors"
             >Tattoo Ideas</a
           >
           <a
-            href="free-generator.html"
+            href="free-generator"
             class="py-2 hover:text-primary transition-colors"
             >Free Generator</a
           >
-          <a href="faq.html" class="py-2 hover:text-primary transition-colors"
+          <a href="faq" class="py-2 hover:text-primary transition-colors"
             >FAQ</a
           >
           <a
-            href="ambigram-generator-guide.html"
+            href="ambigram-generator-guide"
             class="py-2 text-primary font-medium"
             >Guide</a
           >
