--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
           <a href="index.html" class="hover:text-primary transition-colors"
             >Home</a
           >
-          <a href="#features" class="hover:text-primary transition-colors"
+          <a href="/#features" class="hover:text-primary transition-colors"
             >Features</a
           >
-          <a href="#examples" class="hover:text-primary transition-colors"
+          <a href="/#examples" class="hover:text-primary transition-colors"
             >Examples</a
           >
-          <a href="#fonts" class="hover:text-primary transition-colors"
+          <a href="/#fonts" class="hover:text-primary transition-colors"
             >Fonts</a
           >
           <a
@@ -204,7 +204,7 @@
 
         <div class="flex items-center gap-4">
           <a
-            href="#generator"
+            href="/#generator"
             class="hidden md:block bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-full transition-all hover:shadow-lg hover:shadow-primary/20"
           >
             Generate Now
@@ -224,13 +224,13 @@
           <a href="index.html" class="py-2 hover:text-primary transition-colors"
             >Home</a
           >
-          <a href="#features" class="py-2 hover:text-primary transition-colors"
+          <a href="/#features" class="py-2 hover:text-primary transition-colors"
             >Features</a
           >
-          <a href="#examples" class="py-2 hover:text-primary transition-colors"
+          <a href="/#examples" class="py-2 hover:text-primary transition-colors"
             >Examples</a
           >
-          <a href="#fonts" class="py-2 hover:text-primary transition-colors"
+          <a href="/#fonts" class="py-2 hover:text-primary transition-colors"
             >Fonts</a
           >
           <a
@@ -252,7 +252,7 @@
             >Guide</a
           >
           <a
-            href="#generator"
+            href="/#generator"
             class="bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-full text-center transition-all"
           >
             Generate Now
