--- a/indexOring.html
+++ b/indexOring.html
@@ -98,7 +98,7 @@
 
 <body class="font-inter bg-gradient-to-br from-dark to-gray-800 text-light min-h-screen">
     <!-- Navbar -->
-    <nav id="navbar" class="fixed w-full z-50 transition-all duration-300 py-4">
+      <nav id="navbar" class="fixed w-full z-50 transition-all duration-300 py-4">
       <div
         class="container mx-auto px-4 md:px-6 flex justify-between items-center"
       >
@@ -114,13 +114,13 @@
           <a href="index.html" class="hover:text-primary transition-colors"
             >Home</a
           >
-          <a href="#features" class="hover:text-primary transition-colors"
+          <a href="/#features" class="hover:text-primary transition-colors"
             >Features</a
           >
-          <a href="#examples" class="hover:text-primary transition-colors"
+          <a href="/#examples" class="hover:text-primary transition-colors"
             >Examples</a
           >
-          <a href="#fonts" class="hover:text-primary transition-colors"
+          <a href="/#fonts" class="hover:text-primary transition-colors"
             >Fonts</a
           >
           <a
@@ -145,7 +145,7 @@
 
         <div class="flex items-center gap-4">
           <a
-            href="#generator"
+            href="/#generator"
             class="hidden md:block bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-full transition-all hover:shadow-lg hover:shadow-primary/20"
           >
             Generate Now
@@ -165,13 +165,13 @@
           <a href="index.html" class="py-2 hover:text-primary transition-colors"
             >Home</a
           >
-          <a href="#features" class="py-2 hover:text-primary transition-colors"
+          <a href="/#features" class="py-2 hover:text-primary transition-colors"
             >Features</a
           >
-          <a href="#examples" class="py-2 hover:text-primary transition-colors"
+          <a href="/#examples" class="py-2 hover:text-primary transition-colors"
             >Examples</a
           >
-          <a href="#fonts" class="py-2 hover:text-primary transition-colors"
+          <a href="/#fonts" class="py-2 hover:text-primary transition-colors"
             >Fonts</a
           >
           <a
@@ -193,7 +193,7 @@
             >Guide</a
           >
           <a
-            href="#generator"
+            href="/#generator"
             class="bg-primary hover:bg-primary/90 text-white px-5 py-2 rounded-full text-center transition-all"
           >
             Generate Now
