--- a/generator.html
+++ b/generator.html
@@ -163,7 +163,7 @@
           >What is an Ambigram</a
         >
         <a
-          href="/guides/tattoo-design"
+          href="/tattoo-design"
           class="block py-2 px-4 text-dark hover:bg-gray-100"
           >Design Guides</a
         >
