--- a/what-is-ambigram.html
+++ b/what-is-ambigram.html
@@ -82,7 +82,7 @@
             <a href="/generator" class="block py-2 px-4 text-dark hover:bg-gray-100">2D Generator</a>
             <a href="/3d-generator" class="block py-2 px-4 text-dark hover:bg-gray-100">3D Generator</a>
             <a href="/what-is-ambigram" class="block py-2 px-4 bg-primary/10 text-primary font-medium">What is an Ambigram</a>
-            <a href="/guides/tattoo-design" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
+            <a href="/tattoo-design" class="block py-2 px-4 text-dark hover:bg-gray-100">Design Guides</a>
             <a href="./privacy.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
             <a href="./terms.html" class="block py-2 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
             <div class="p-4">
